# src/main/resources/openapi.yml
@@ -977,6 +977,26 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
 
+    delete:
+      tags:
+        - Experience
+      summary: Eliminar experiencia
+      description: Elimina una experiencia del sistema
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: experiencia eliminada exitosamente
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+
   # Futured Project Endpoints
   /futured-project:
     get:
